[package]
name = "openaction-element-call"
authors = ["ninjadev64"]
version = "1.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"
simplelog = "0.12"
openaction = "1.0.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
